31/1/24 edited the event page background and changed the header

--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
         </section>
      <div class="container">
         <div class="card">
-        <h2>Event Calender</h2>
+        <h2>Event Calendar</h2>
         <p>The event calendar on our website is a valuable resource designed to keep you informed about upcoming events, activities, and important dates. Whether it's community gatherings, special promotions, or essential deadlines, our event calendar provides a centralized and accessible place for you to explore what's happening.
             Check the calendar regularly to ensure you don't miss out on anything noteworthy!</p>
         </div>
