--- a/event.html
+++ b/event.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport"content="width=device-width,intial-scale=1.0">
-    <title>Event and Calender</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Event and Calendar</title>
+    <link rel="stylesheet" href="event.css">
     </head>
     <body>
         <header class="header">
@@ -20,5 +20,8 @@
 
             </nav>
         </header>
+        <div>
+            <img id="background" src="hog.jpg" alt="" title=""/>
+        </div>
     </body>
 </html>
