--- a/new/event1.html
+++ b/new/event1.html
@@ -10,11 +10,33 @@
     <header class="site-header">
         <div class="container">
             <div id="logo"><img src="./images/logo2.jpg" alt="logo"></div>
-            <div id="explore"><a href="explore.html"><h1>Explore</h1> </a></div>
-            <div id="About"><a href="about.html"><h1>About</h1></a></div>
-            <div id="Contact"><a href="contact.html"><h1>Contact Us</h1></a></div>
+            <div id="explore"><a href="index.html"><h1>Home</h1> </a></div>
+            <!-- <div id="About"><a href="about.html"><h1>About</h1></a></div> -->
+            <div id="login"><a href="form.html"><h1>Login</h1></a></div>
+            <div id="contact"><a href="contact.html"><h1>Contact Us</h1></a></div>
         </div>
     </header>
+    <section class="event-container-wrapper">
+    <div class="event-container" id="lazer">
+            <h2>Lazer Attack</h2>
+            <img src="./images/event2.jpeg" alt="lazzerena">
+            <p>"Lazer Attack" is an adrenaline-pumping multiplayer game where players engage in futuristic battles using laser guns. Set in immersive virtual environments, participants strategize and compete to outmaneuver opponents while dodging incoming laser beams. With fast-paced action and thrilling gameplay, Lazer Attack offers an electrifying experience for gamers seeking intense sci-fi combat.</p>
+         </div>
+        <div class="event-container" id="vibe">
+            <h2>Vibe: Dance Battle</h2>
+            <img src="./images/event3.jpeg" alt="event_poster">
+            <p>"Vibe: Dance Battle" is an electrifying event where dancers showcase their skills in a head-to-head competition. From hip-hop to contemporary, participants groove to the rhythm, expressing their unique style and creativity on the dance floor. With pulsating beats and dynamic moves, Vibe promises an unforgettable experience for both performers and spectators alike.</p>
+        </div>
+         <div class="event-container" id="roadies">
+            <h2>Roadies: Task Event</h2>
+            <img src="./images/event4.jpg" alt="roadies">
+            <p>"Roadies: Task Event" is an adventurous challenge where participants push their limits through a series of thrilling tasks. From physical endurance to mental agility, contestants navigate through obstacles, showcasing their grit and determination. With each task designed to test their resilience, Roadies promises an exhilarating journey of resilience and resilience, culminating in the ultimate test of strength and skill.</p>
+        </div>
+    </section>
+        
+    <script  src="script.js"></script>
+    </body>
+</html>
     
 </body>
 </html>
