--- a/new/index.html
+++ b/new/index.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home-Page</title>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="site-header">
         <div class="container">
             <div id="logo"><img src="./images/logo2.jpg" alt="logo"></div>
-            <div id="explore"><a href="explore.html"><h1>Explore</h1> </a></div>
-            <div id="About"><a href="about.html"><h1>About</h1></a></div>
-            <div id="Contact"><a href="contact.html"><h1>Contact Us</h1></a></div>
+            <!-- <div id="explore"><a href="explore.html"><h1>Explore</h1> </a></div> -->
+            <div id="login"><a href="form.html"><h1>Login</h1></a></div>
+            <div id="contact"><a href="contact.html"><h1>Contact Us</h1></a></div>
+            <div id="vol"><a href="vol.html"><h1>Volunteer</h1></a></div>
         </div>
     </header>
     <h1>"Create Memories for a Lifetime."</h1>
-    <div id="event-container">
+    <!-- <div id="event-container">
         <h2>Upcoming Events</h2>
             <div id="event1">
                 <img src="./images/event1.jpeg" alt="">
@@ -29,7 +28,10 @@
             </div>
             <div id="event3">
                 <img src="./images/event3.jpeg" alt="">
-            </div>
+            </div> -->
     </div>
+    <section>
+        <a id="btn">Explore!</a>
+    </section>  
 </body>
 </html>
